# cs4644_sentiment_analysis_feature_in_transformers

./: .gitignore  README.md  pyproject.toml
memory/: MEMORY.md  paper_status.md  project_context.md  sae_results.md
results/: all_results.json  baseline_results.json  causal_ablation.json  sentiment_feature_analysis.json  transformer_results.json
scripts/: analyze_sentiment_features.py  causal_ablation.py  run_all.py
src/: baseline.py  config.py  data.py
src/sae/: model.py  train.py
src/transformer/: model.py  train.py
