[project]
name = "dl-sae-sentiment-analysis"
version = "0.1.0"
description = "Sparse Autoencoder for sentiment feature analysis on Amazon Reviews"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "tiktoken>=0.5.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
